// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Session.ts should create 1`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "session_created",
    "payload": Object {
      "accountId": "eb1fc7a5-e141-4be4-9e91-d0fec8ee5c12",
      "clientId": "852a0686-a203-4645-a890-fb0710d22638",
      "deviceId": "22c42ad2-7f93-4173-9204-8ad100eb2b57",
      "expires": 2020-01-01T07:00:00.000Z,
      "grantType": "password",
      "refreshId": "a63e8289-6ee3-4b26-b92b-e8604f51d338",
      "scope": Array [
        "default",
        "email",
        "openid",
        "email",
      ],
    },
  },
]
`;

exports[`Session.ts should get accountId 1`] = `"eb1fc7a5-e141-4be4-9e91-d0fec8ee5c12"`;

exports[`Session.ts should get clientId 1`] = `"852a0686-a203-4645-a890-fb0710d22638"`;

exports[`Session.ts should get grantType 1`] = `"password"`;

exports[`Session.ts should get scope 1`] = `
Array [
  "default",
  "email",
  "openid",
  "email",
]
`;

exports[`Session.ts should get/set expires 1`] = `2020-01-01T07:00:00.000Z`;

exports[`Session.ts should get/set expires 2`] = `2020-12-31T23:00:01.000Z`;

exports[`Session.ts should get/set expires 3`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "session_expires_changed",
    "payload": Object {
      "expires": 2020-12-31T23:00:01.000Z,
    },
  },
]
`;

exports[`Session.ts should get/set refreshId 1`] = `"a63e8289-6ee3-4b26-b92b-e8604f51d338"`;

exports[`Session.ts should get/set refreshId 2`] = `"cf588ada-db91-4c05-b758-30b21d44b4b5"`;

exports[`Session.ts should get/set refreshId 3`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "session_refresh_id_changed",
    "payload": Object {
      "refreshId": "cf588ada-db91-4c05-b758-30b21d44b4b5",
    },
  },
]
`;

exports[`Session.ts should have all data 1`] = `
Session {
  "_accountId": "eb1fc7a5-e141-4be4-9e91-d0fec8ee5c12",
  "_clientId": "852a0686-a203-4645-a890-fb0710d22638",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": "22c42ad2-7f93-4173-9204-8ad100eb2b57",
  "_events": Array [],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "password",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": "a63e8289-6ee3-4b26-b92b-e8604f51d338",
  "_scope": Array [
    "default",
    "email",
    "openid",
    "email",
  ],
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`Session.ts should have optional data 1`] = `
Session {
  "_accountId": "eb1fc7a5-e141-4be4-9e91-d0fec8ee5c12",
  "_clientId": "852a0686-a203-4645-a890-fb0710d22638",
  "_created": 2020-01-01T07:00:00.000Z,
  "_deviceId": null,
  "_events": Array [],
  "_expires": 2020-01-01T07:00:00.000Z,
  "_grantType": "password",
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_refreshId": "a63e8289-6ee3-4b26-b92b-e8604f51d338",
  "_scope": Array [
    "default",
    "email",
    "openid",
    "email",
  ],
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;
